# flexlib

./: CMakeLists.txt  README.md  conanfile.py  get_conan_dependencies.cmake
cmake/: Exports.cmake  Findflexlib.cmake  Options.cmake  ProjectFiles.cmake  fetch_cmake_utils.cmake  fetch_conan_auto_install.cmake  setup_sanitizers.cmake
include/flexlib/: ClingInterpreterModule.hpp  DispatchQueue.hpp  ToolPlugin.hpp  annotation_match_handler.hpp  annotation_parser.hpp  boost_command_line.hpp  clangPipeline.hpp  clangUtils.hpp  ctp_registry.hpp  funcParser.hpp  inputThread.hpp  parser_constants.hpp  per_plugin_settings.hpp
include/flexlib/CXXCTP_STD/: CXXCTP_STD.hpp
include/flexlib/core/errors/: errors.hpp
include/flexlib/integrations/outcome/: error_macros.hpp  error_utils.hpp
include/flexlib/matchers/: annotation_matcher.hpp
include/flexlib/options/ctp/: options.hpp
include/flexlib/reflect/: ReflTypes.hpp  ReflectAST.hpp  ReflectionCache.hpp  TypeInfo.hpp  ast_utils.hpp
include/flexlib/template_engine/: CXTPL_AnyDict.hpp  I_Dict.hpp
src/: ClingInterpreterModule.cpp  DispatchQueue.cpp  ToolPlugin.cc  annotation_match_handler.cc  annotation_parser.cc  boost_command_line.cpp  clangPipeline.cpp  clangUtils.cpp  ctp_registry.cpp  funcParser.cpp  inputThread.cpp  parser_constants.cc  per_plugin_settings.cpp  utils.cpp
src/CXXCTP_STD/: CXXCTP_STD.cpp
src/core/errors/: errors_CodegenError.cpp
src/matchers/: annotation_matcher.cc
src/options/ctp/: options.cpp
src/reflect/: ReflTypes.cpp  ReflectAST.cpp  ReflectionCache.cpp  TypeInfo.cpp
src/template_engine/: CXTPL_AnyDict.cpp  I_Dict.cpp
test_package/: CMakeLists.txt  conanfile.py
tests/: CMakeLists.txt  doctest.test.cpp  gmock.test.cpp  gtest_test_runner.cmake  main.cpp  perf_test_runner.cmake  test_data_files.cmake  test_sources.cmake  testsCommon.h
